--- a/Android/NewsReader/app/src/main/AndroidManifest.xml
+++ b/Android/NewsReader/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TopicHomeScreenActivity">
+        <activity android:name=".pages.article_hub.TopicHomeScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
