--- a/Android/NewsReader/app/build.gradle
+++ b/Android/NewsReader/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile "com.android.support:leanback-v17:+"
     compile 'com.android.support:recyclerview-v7:22+'
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'io.realm:realm-android:0.87.1'
 }
 
 
